src/pages/templates/wide-header-page/wide-header-page.scss
wide-header-page {
  @include fix-ios-bg-scroll();

  .wide-header {
    ion-title .toolbar-title {
      font-weight: 400;
    }

    &__title {
      color: rgba(20, 42, 63, 1);
      font-size: 25px;
      font-weight: 500;
      padding-top: 30px;
      padding-bottom: 20px;
      padding-left: 20px;
    }

    ion-navbar {
      .ios & {
        padding-top: 3rem; // Fix iOS 10.3
        padding-top: calc(6px + env(safe-area-inset-top));

        ion-title {
          padding-top: 3rem; // Fix iOS 10.3
          padding-top: env(safe-area-inset-top);
        }
      }
    }

    &.cordova {
      ion-navbar {
        .ios & {
          padding-bottom: 7px;
        }
      }
    }
  }
}

